kubernetes/apps/webdev/overlays/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: overlays
    app.kubernetes.io/instance: overlays
    app.kubernetes.io/name: overlays
  name: overlays
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: overlays
  template:
    metadata:
      labels:
        app: overlays
        app.kubernetes.io/name: overlays
    spec:
      containers:
      - image: ghcr.io/fma965/obs-overlays:v1.0.0
        name: overlays
        ports:
        - containerPort: 80
          hostPort: 80
          protocol: TCP
