kubernetes/apps/webdev/overlays/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: overlays
  name: overlays
spec:
  ports:
  - name: "web"
    port: 80
    targetPort: 80
  selector:
    app: overlays
